@@ -2,6 +2,7 @@ Change log for Bos Wars
 -----------------------
 
 Development version:
+- Fixed rounding bug in minimap (Jimmy Salmon)
 - Added dutch translation (Foppe Benedictus, Eric Kok)
 - Fixed hot keys in different languages (Jimmy Salmon)
 - Added gimme cheat (Jimmy Salmon)
